--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>About Us | Visit Pakistan</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <nav>
         <a href="index.html" class="logo">Visit Pakistan 🇵🇰</a>
@@ -17,13 +20,23 @@
 
     <section>
         <h1>Our Mission</h1>
-        <p>We are a student-led group dedicated to showcasing the positive image of Pakistan through digital tourism. Our platform helps travelers find the best spots and guides.</p>
+        <p>We are a student-led group dedicated to showcasing the positive image of Pakistan through digital tourism.
+            Our platform helps travelers find the best spots and guides.</p>
         <div class="card-container">
-            <div class="card"><h3>Safe Travels</h3><p>We prioritize tourist safety and comfort.</p></div>
-            <div class="card"><h3>Eco-Tourism</h3><p>Preserving the beauty of our mountains.</p></div>
+            <div class="card">
+                <h3>Safe Travels</h3>
+                <p>We prioritize tourist safety and comfort.</p>
+            </div>
+            <div class="card">
+                <h3>Eco-Tourism</h3>
+                <p>Preserving the beauty of our mountains.</p>
+            </div>
         </div>
     </section>
 
-    <footer><p>&copy; 2026 Visit Pakistan Group Project</p></footer>
+    <footer>
+        <p>&copy; 2026 Visit Pakistan Group Project</p>
+    </footer>
 </body>
+
 </html>
