--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us | Visit Pakistan</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css"> 
+</head>
 <body>
     <nav>
         <a href="index.html" class="logo">Visit Pakistan 🇵🇰</a>
@@ -15,16 +16,18 @@
         </ul>
     </nav>
 
-    <section>
+    <section class="contact-section">
         <h1>Plan Your Trip</h1>
+        <div class="divider"></div>
         <p>Fill out this form and our team will contact you within 24 hours.</p>
-        <br>
-        <form>
+        
+        <form class="contact-form">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
             <select>
                 <option>Select Destination</option>
                 <option>Hunza Valley</option>
+                <option>Skardu Valley</option>
                 <option>Lahore Heritage</option>
                 <option>Swat Valley</option>
             </select>
