--- a/services.html
+++ b/services.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Our Services | Visit Pakistan</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <nav>
         <a href="index.html" class="logo">Visit Pakistan 🇵🇰</a>
@@ -18,12 +21,35 @@
     <section>
         <h1>Tourism Packages</h1>
         <div class="card-container">
-            <div class="card"><h3>Northern Areas</h3><p>7-day tour to Hunza and Skardu starting from 50,000 PKR.</p></div>
-            <div class="card"><h3>Religious Tourism</h3><p>Kartarpur and Nankana Sahib heritage tours.</p></div>
-            <div class="card"><h3>Coastal Tours</h3><p>Weekend trips to Gwadar and Ormara beach.</p></div>
+            <div class="card">
+                <img src="hunza.jpg" alt="Hunza Valley" class="card-img">
+                <div class="card-content">
+                    <h3>Hunza Family Tour</h3>
+                    <p>5 Days | PKR 45,000 per person</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="skardu.jpg" alt="Skardu Valley" class="card-img">
+                <div class="card-content">
+                    <h3>Skardu Family Tour</h3>
+                    <p>7 Days | PKR 65,000 per person</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="naran.jpg" alt="Naran Kaghan" class="card-img">
+                <div class="card-content">
+                    <h3>Naran Kaghan Tour</h3>
+                    <p>4 Days | PKR 35,000 per person</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer><p>&copy; 2026 Visit Pakistan Group Project</p></footer>
+    <footer>
+        <p>&copy; 2026 Visit Pakistan Group Project</p>
+    </footer>
 </body>
+
 </html>
